# just-datastructures

./: .gitignore  README.md  pyproject.toml
src/link_list/: singly_linked_list.py
src/link_list/tests/: test_singly_linked_list.py
